# pierce

price_scraper/: .env.example  .gitignore  README.md  project.md  pyproject.toml  task_list.md
price_scraper/config/: categories.yaml  products.csv  settings.yaml  sites.yaml
price_scraper/data/: eu_products_ai_enhanced_20250815_144601.csv  eu_products_test_20250815_143215.csv
price_scraper/moto-price-compare/: main.py  pyproject.toml
price_scraper/scripts/: extract_eu_products.py  extract_eu_products_ai.py  extract_eu_products_test.py  parse_sitemaps.py  save_test_results.py  test_base_crawler.py
price_scraper/src/crawlers/: base_crawler.py
price_scraper/src/models/: product.py
price_scraper/src/processors/: sitemap_parser.py
price_scraper/src/services/: ai_search_generator.py
price_scraper/src/storage/: schema.sql
price_scraper/src/utils/: config.py  firecrawl_cache.py  logger.py  rate_limiter.py
